--- a/style.css
+++ b/style.css
@@ -25,11 +25,9 @@ section {
   margin: auto;
 }
 
-.project-card {
-  background: white;
-  padding: 1rem;
-  margin: 1rem 0;
-  border-left: 5px solid #3498db;
+ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
 }
 
 form input, form textarea {
